--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build: tweet_collector/
     depends_on:
       - mongo_db
+    volumes:
+      - ./tweet_collector:/app 
 
   mongo_db:
     image: mongo
@@ -16,6 +18,8 @@ services:
     depends_on:
       - mongo_db
       - postgres_db
+    volumes:
+      - ./etl_job:/app
 
   postgres_db:
     image: postgres
@@ -24,6 +28,12 @@ services:
       - POSTGRES_PASSWORD=xxxx
     ports:
       - 5555:5432
+
+  # airflow:
+  #   image: puckel/docker-airflow
+  #   ports:
+  #     - 8081:8080
+  #   command: ["webserver", "scheduler"]
 
   # slack_bot:
   #   build: slack_bot/
