--- a/slack_bot/Dockerfile
+++ b/slack_bot/Dockerfile
@@ -11,4 +11,4 @@ COPY . /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Run app.py when the container launches
-CMD ["python", "get_tweets.py"]
+CMD ["python", "slack_bot.py"]
